# applicative-extras

./: applicative-extras.cabal
Control/Applicative/: Backwards.hs  Compose.hs  Error.hs  State.hs
