Name:            applicative-extras
Version:         0.1.5
Synopsis:        Instances for Applicative
Description:     Some instances for applicative functors and type-level composition.
Category:        Control
License:         BSD3
License-file:    LICENSE
Author:          Chris Eidhof <ce+hackage@tupil.com>, Russel O'Connor
Maintainer:      Chris Eidhof <ce+hackage@tupil.com>
Exposed-Modules:   Control.Applicative.Compose
                 , Control.Applicative.Error
                 , Control.Applicative.State
                 , Control.Applicative.Backwards
Build-Type:      Simple
Build-Depends:   base, haskell98, mtl
